# nextjs16-template

./: .env.example  .gitignore  README.md  drizzle.config.ts  package-lock.json  package.json  pnpm-lock.yaml  proxy.ts
.cursor/rules/: general.mdc
.github/: copilot-instructions.md
.kiro/steering/: project-standards.md
.windsurf/rules/: main-coding.md
ai/: README.md
ai/clients/: azure.ts  index.ts
ai/models/: preference.ts  registry.ts
ai/types/: index.ts
app/: global-error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
app/(authenticated)/: layout.tsx
app/(authenticated)/dashboard/: page.tsx
app/(home)/: page.tsx
app/(marketing)/: layout.tsx
app/(marketing)/about/: page.tsx
app/(unauth)/: layout.tsx
app/(unauthenticated)/: layout.tsx  page.tsx
app/(unauthenticated)/sign-in/: page.tsx
app/actions/: .gitkeep
app/api/: .gitkeep
app/components/: chat.tsx  itinerary-day.tsx  itinerary.tsx  message-input.tsx  message-list.tsx  product-card.tsx  product-grid.tsx
backend/: .env.example  __init__.py  config.py  main.py  pyproject.toml
backend/agent/: travel_agent.py
backend/agent/prompts/: travel_agent.md
backend/datahub/: __init__.py  client.py  queries.py
backend/schemas/: outputs.py
backend/services/: product_cache.py
backend/tools/: details.py  itinerary.py  search.py
components/layout/: footer.tsx  header.tsx
data/: cache-tags.ts  users.ts
feature/init/: spec.md  tasks.md
hooks/: use-chat.ts
lib/db/: index.ts  queries.ts  schema.ts
prompt/: python-agent-project-setup-prompt.md
types/: index.ts
(+4 files in other folders)
