[project]
name = "dandelier-nuuksio-backend"
version = "0.1.0"
description = "AI-powered travel itinerary generator for Nuuksio area"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.26.0",
    "pydantic>=2.5.0",
    "openai>=1.12.0",
    "openai-agents>=0.1.0",
    "litellm>=1.30.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
